# datrie

./: .gitattributes  .gitignore  .gitmodules  .hgignore  .hgtags  .pep8speaks.yml  .travis.yml  CHANGES.rst  CMakeLists.txt  COPYING  MANIFEST  MANIFEST.in  Makefile  README.rst  appveyor.yml  appveyor_yml.disabled  dev-requirements.txt  environment.devenv.yml  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox-bench.ini  tox.ini  travis_yml.disabled  trie_state_get_terminal_data.patch  update_c.sh
.ci/: pythonPackagesToInstallFromGit.txt
.github/workflows/: CI.yml  ci.yaml  ci.yml  conda.yml  release.yml  smoke.yml  vs_env.bat  wheels.yaml  wheels.yml
bench/: speed.py
cmake/modules/: FindDatrie.cmake
conda.recipe/: meta.yaml
continuous_integration/appveyor/: requirements.txt  run_with_env.cmd
ext/: _datrie.pyx  cdatrie.pxd
libdatrie/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  config.h.in  configure  configure.ac
libdatrie/datrie/: Makefile.am  Makefile.in  alpha-map-private.h  alpha-map.c  alpha-map.h  darray.c  darray.h  dstring-private.h  dstring.c  dstring.h  fileutils.c  fileutils.h  key-storage.c  key-storage.h  libdatrie.def  libdatrie.map  tail.c  tail.h  trie-private.h  trie-string.c  trie-string.h  trie.c  trie.h  triedefs.h  typedefs.h
libdatrie/doc/: Doxyfile.in  Makefile.am  Makefile.in
libdatrie/man/: Makefile.am  Makefile.in
libdatrie/tests/: Makefile.am  test_file.c  test_iterator.c  test_nonalpha.c  test_store-retrieve.c  test_walk.c  utils.c  utils.h
libdatrie/tools/: Makefile.am  Makefile.in  trietool.c
src/: CMakeLists.txt  cdatrie.c  cdatrie.html  cdatrie.pxd  datrie.c  datrie.html  datrie.pyx  stdio_ext.c  stdio_ext.html  stdio_ext.pxd
tests/: test_alpha_map.py  test_dictview.py  test_iteration.py  test_random.py  test_state.py  test_trie.py  test_trieview.py
travis/: build-wheels.sh
