[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "Cython>=0.20",
    "pybind11>=2.6.1",
    "ninja; sys_platform != 'win32' and platform_machine != 'arm64'",
    "cmake>=3.15",
]

build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]

[tool.coverage.run]
plugins = ["Cython.Coverage"]
branch = true
source = ["src"]
omit = ["tests", ".tox"]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
fail_under = 80
show_missing = true
