[metadata]
name = datrie
author = Mikhail Korobov
author_email = kmike84@gmail.com
maintainer = Steve Arnold
maintainer_email = nerdboy@gentoo.org
description = Super-fast, efficiently stored Trie for Python
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/sarnold/datrie
license = LGPLv2+
license_files = COPYING
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Programming Language :: Cython
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Text Processing :: Linguistic

[options]
python_requires = >=3.6

zip_safe = False

[options.extras_require]
test =
    pytest
    hypothesis
    pytest-flake8

[aliases]
test=pytest

[tool:pytest]
minversion = 6.0
testpaths =
    tests

[flake8]
exclude =
    .git,
    __pycache__,
    tests,
    bench,
    build,
    dist
filename =
    *.pyx
    *.pxd
max-line-length = 95
select=E501,E302,E203,E111,E114,E221,E303,E128,E231,E126,E265,E305,E301,E127,E261,E271,E129,W291,E222,E241,E123,F403,C400,C401,C402,C403,C404,C405,C406,C407,C408,C409,C410,C411
